--- a/view/style.css
+++ b/view/style.css
@@ -1,4 +1,3 @@
-
 @import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 html,
@@ -124,7 +123,7 @@ hr {
 }*/
 
 .jumbotron {
-    background: no-repeat center center fixed url(images/livelove-bg.jpg);
+    background: no-repeat center center fixed url(images/bg.jpg);
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -150,14 +149,14 @@ hr {
 }*/
 
 .jumbotron .overlay {
-    background-color: #54A990;
+    background-color: rgba(0,0,0,.6);
     position: absolute;
     top: 0px;
     bottom: 0px;
     left: 0px;
     right: 0px;
-    opacity: 0.5;
-    filter: alpha(opacity=20);
+    /* opacity: 0.5;
+    filter: alpha(opacity=20); */
     z-index: 2;
 }
 
@@ -184,11 +183,11 @@ hr {
     /*width: 358px;*/
     letter-spacing: 1px;
     font-weight: 400;
-    font-size: 62px; 
+    font-size: 62px;
 }
 
 #typed {
-    font-size: 72px;
+    font-size: 56px;
     font-weight: 600;
     letter-spacing: 1px;
     text-shadow: 2px 2px 4px #4c4c4c;
