--- a/view/style.css
+++ b/view/style.css
@@ -123,7 +123,7 @@ hr {
 }*/
 
 .jumbotron {
-    background: no-repeat center center fixed url(images/bg.jpg);
+    background: no-repeat center center fixed url(images/bg-2.jpg);
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
