--- a/view/style.css
+++ b/view/style.css
@@ -192,9 +192,6 @@ hr {
 }
 
 @media (max-width: 768px) {
-    .jumbotron .container > * {
-        text-align: left;
-    }
     .jumbotron .container h1 {
         font-size: 28px;
     }
@@ -202,7 +199,7 @@ hr {
         font-size: 26px;
     }
     .typed-cursor{
-        font-size: 30px;
+        font-size: 30px !important;
     }
 }
 
