--- a/view/style.css
+++ b/view/style.css
@@ -538,7 +538,7 @@ hr {
   max-width: 100%;
 }
 
-.work-item:hover .work-zoom {
+.work-item:hover .work-zoom, .work-item:hover .ext-link {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
   opacity: 1;
@@ -585,19 +585,35 @@ hr {
 }
 
 .work-zoom.search {
-  left: 40%;
-}
-.work-zoom.ext-link {
   left: 60%;
 }
+.ext-link {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    color: #333;
+    display: table;
+    text-align: center;
+    color: #000;
+    left: 40%;
+    top: 50%;
+    margin-left: -25px;
+    margin-top: -25px;
+    background: #fff;
+    font-size: 20px;
+    opacity: 0;
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    transition: all 0.6s;
+}
 
-.work-zoom i {
+.work-zoom i, .ext-link i {
   display: table-cell;
   vertical-align: middle;
 }
 
-.work-zoom:hover {
-  color: #000;
+.work-zoom:hover, .ext-link:hover {
+  color: #54A9A5;
 }
 
 .work-popup {
