--- a/view/style.css
+++ b/view/style.css
@@ -697,6 +697,8 @@ hr {
     margin-right: 10px;
     opacity: 0.6;
     filter: alpha(opacity=60);
+    -webkit-transition: all 0.6s;
+    transition: all 0.6s;
 }
 
 #contact a .icon {
@@ -710,6 +712,13 @@ hr {
     text-decoration: none;
 }
 
+#contact a:active {
+    text-decoration: none;
+}
+
+.fa-3x {
+    font-size:2.3em !important;
+}
 
 
 @media (max-width: 1200px) {
