--- a/view/style.css
+++ b/view/style.css
@@ -227,7 +227,13 @@ hr {
   -webkit-animation: 0;
           animation: 0;
 }
-      
+
+.jumbotron .subtitle {
+    margin-top: 16px;
+    font-size: 16px;
+    color: #666;
+}
+
 .jumbotron .scroll-down {
     height: 70px;
     width: 90px;
