--- a/view/style.css
+++ b/view/style.css
@@ -416,15 +416,22 @@ hr {
     box-sizing: border-box;
     background-clip: content-box;
     border: 4px solid transparent;
-    border-radius: 6px
+    border-radius: 6px;
+    margin-bottom: 0.5em;
 }
 .jobIcon.ctciIcon {
     width: 90px;
 }
-
 .jobIcon.pegaIcon {
     width: 120px;
 }
+@media (min-width: 991px) {
+    .experience .jobTitle {
+        display:inline-block;
+        margin-left: 1em;
+    }
+}
+
 /* abilities */
 
 #abilities ul > li {
