--- a/view/style.css
+++ b/view/style.css
@@ -708,14 +708,17 @@ hr {
 }
 
 .mfp-close-btn-in .mfp-close {
-  position: absolute;
+  /* position: absolute;
   background: #fff;
   font-size: 40px;
   width: 50px;
   height: 50px;
   opacity: 1;
   color: #333;
-  box-shadow: -5px 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: -5px 5px 20px rgba(0, 0, 0, 0.2); */
+  top: -40px;
+  right: -30px;
+  color: #fff;
 }
 
 /*@media (min-width: 992px) {
