--- a/view/style.css
+++ b/view/style.css
@@ -220,7 +220,7 @@ hr {
     margin-top: 16px;
     font-size: 21px;
     color: #1bbede;
-    padding-bottom: 5px;
+    padding: 0 10px 5px 10px;
 }
 
 @media (max-width: 767px) {
