--- a/view/style.css
+++ b/view/style.css
@@ -215,6 +215,7 @@ hr {
     font-size: 21px;
     color: #1bbede;
     padding: 0 10px 5px 10px;
+    letter-spacing: 1px;
 }
 
 @media (max-width: 767px) {
