--- a/view/style.css
+++ b/view/style.css
@@ -93,29 +93,10 @@ hr {
     border-color: #1c8784;
 }
 
-
-/*.icon {
-    display: inline-block;
-    /*background: url(images/sm_icon_sprite.png) no-repeat;
-    height: 32px;
-    width: 32px;
+/* Icon */
+.fa.fa-stack-1x.fa-inverse {
+    color:#434242;
 }
-
-.icon.icon-twitter {
-    background-position: 0px 0px;
-}
-
-.icon.icon-linkedin {
-    background-position: 0px -32px;
-}
-
-.icon.icon-skype {
-    background-position: 0px -64px;
-}
-
-.icon.icon-email {
-    background-position: 0px -96px;
-}*/
 
 .jumbotron {
     background: no-repeat center center fixed url(images/pen-bg.jpg);
@@ -768,11 +749,6 @@ hr {
 #contact a:active {
     text-decoration: none;
 }
-
-.fa-3x {
-    font-size:2.3em !important;
-}
-
 
 @media (max-width: 1200px) {
     /*#interests .interest-content {
