--- a/view/style.css
+++ b/view/style.css
@@ -529,8 +529,8 @@ hr {
     line-height: 18px;
     padding: 15px;
 }
-#projects .sub-header{
-    color: #7b7a7a;
+p.sub-header{
+    color: #7b7a7a !important;
 }
 
 /* ===================================
